--- a/UnderwritingClientApp/app/index.html
+++ b/UnderwritingClientApp/app/index.html
@@ -33,15 +33,14 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">underwritingClientApp</a>
+            <a class="navbar-brand" href="#/">B.O.M,B. Bank</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li><a href="#/">Home</a></li>
+              <li><a ng-href="#/inputform">Credit Application</a></li>
             </ul>
           </div>
         </div>
@@ -53,9 +52,7 @@
     </div>
 
     <div class="footer">
-      <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-      </div>
+      
     </div>
 
 
